welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: not found: value a
    if (a==6) {
        ^withoutDoubles:4: error: not found: value a
      a=1
      ^withoutDoubles:5: error: not found: value b
    } else if (b==6) {
               ^withoutDoubles:6: error: not found: value b
      b=1
      ^withoutDoubles:7: error: not found: value a
    } else a=1
           ^withoutDoubles:8: error: not found: value a
  } else return (a+b)
                 ^withoutDoubles:8: error: not found: value b
  } else return (a+b)
                   ^