welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (noDoubles==true && die1==die2) {
    if (a==6) {
      a=1
    } else if (b==6) {
      b=1
    } else a=1
  } else return (a+b)
}